--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -1,14 +1,23 @@
-<nav>
-    <a href="{% url 'index' %}">Home</a>
-
-    {% if request.user.is_authenticated %}
-        <a href="{% url 'logout user' %}">Logout</a>
-        <a href="{% url 'details user' pk=user.pk %}">Profile</a>
-    {% else %}
-        <a href="{% url 'login user' %}">Login</a>
-    {% endif %}
-
-    <div>
-        ---------------------
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container px-5">
+        {% if request.user.is_authenticated %}
+            <a class="navbar-brand" href="#!">Welcome {{ request.user.first_name }}</a>
+        {% endif %}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                </li>
+                {% if not request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login user' %}">Login</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout user' %}">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                                            href="{% url 'details user' pk=request.user.pk %}">Profile</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
 </nav>
