--- a/templates/machines/machine-edit.html
+++ b/templates/machines/machine-edit.html
@@ -1,22 +1,80 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-<header>
-    {% include 'base/nav.html' %}
-</header>
+{% extends 'base/base.html' %}
 
-<form method="post" action="{% url 'machine edit' pk=machine.pk %}">
-    {{ form.as_p}}
-    <input type="submit" value="OK">
-    {% csrf_token %}
-</form>
+{% block title %}{{ machine.name }} edit{% endblock title %}
 
-</body>
-</html>
+{% block page_content %}
+    <div>
+        <form method="post" action="{% url 'machine edit' pk=machine.pk %}" enctype="multipart/form-data">
+            {% for field in form %}
+                <div class="form-group">
+                    {{ field }}
+                </div>
+            {% endfor %}
+
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a class="btn btn-danger" href="{% url 'machine delete' pk=machine.pk %}">Delete</a>
+
+            {% csrf_token %}
+
+
+        </form>
+    </div>
+
+
+    {#    <form method="post" action="{% url 'machine edit' pk=machine.pk %}">#}
+    {#        <div class="form-group mb-3 col-md-3">#}
+    {#            <label for="name" class="form-label">Name</label>#}
+    {#            <input type="text" class="form-control" id="name" aria-describedby="emailHelp"#}
+    {#            value="{{ machine.name }}">#}
+    {#    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>#}
+    {#        </div>#}
+    {#        <div class="form-group mb-3 col-md-3">#}
+    {#            <label for="type" class="form-label">Type</label>#}
+    {#            <input type="text" class="form-control" id="type">#}
+    {#        </div>#}
+    {#        <div class="form-group mb-3 col-md-3">#}
+    {#            <label for="image" class="form-label">Image</label>#}
+    {#            <input class="form-control" type="file" id="image">#}
+    {#        </div>#}
+    {#        <div class="form-group col-md-5">#}
+    {#            <textarea class="form-control" id="details" rows="4"></textarea>#}
+    {#            <label class="form-label" for="details">Details</label>#}
+    {#        </div>#}
+    {##}
+    {#        <button type="submit" class="btn btn-primary">Save</button>#}
+    {#    {% csrf_token %}#}
+    </form>
+
+
+
+{% endblock page_content %}
+
+
+
+
+
+
+
+{#<!doctype html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#    <meta charset="UTF-8">#}
+{#    <meta name="viewport"#}
+{#          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">#}
+{#    <meta http-equiv="X-UA-Compatible" content="ie=edge">#}
+{#    <title>Document</title>#}
+{#</head>#}
+{#<body>#}
+{#<header>#}
+{#    {% include 'base/nav.html' %}#}
+{#</header>#}
+{##}
+{#<form method="post" action="{% url 'machine edit' pk=machine.pk %}" enctype="multipart/form-data">#}
+{##}
+{#    {{ form.as_p}}#}
+{#    <input type="submit" value="OK">#}
+{#    {% csrf_token %}#}
+{#</form>#}
+{##}
+{#</body>#}
+{#</html>#}
