Modified orders templates

--- a/templates/issues/edit-closed-issue-error.html
+++ b/templates/issues/edit-closed-issue-error.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Not Accessible</title>
-</head>
-<body>
-<h2>Issue '{{ issue.pk }}' is closed and not editable</h2>
-<p>
-    <a href="{% url 'issue details' pk=issue.pk %}">View Issue details</a>
-</p>
-<a href="{% url 'issues' %}">Back to Issue List</a>
+{% extends 'base/base.html' %}
 
-</body>
-</html>
+{% block page_content %}
+
+    <h2 class="text-danger">Issue '{{ issue.pk }}' is closed and not editable</h2>
+    <p>
+        <a class="btn btn-outline-dark flex-shrink-0" type="submit"
+           href="{% url 'issue details' pk=issue.pk %}">
+            <i class="bi-cart-fill me-1"></i>
+            Back to Issue {{ issue.pk }}
+        </a>
+    </p>
+    <a class="btn btn-outline-dark flex-shrink-0" type="submit"
+       href="{% url 'issues' %}">
+        <i class="bi-cart-fill me-1"></i>
+        Back to Issue List
+    </a>
+
+{% endblock page_content %}
