--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -1,11 +1,11 @@
 {% extends 'base/base.html' %}
 {% load static %}
+
+{% block title %}Maintenance Helper{% endblock title %}
+
 {% block page_content %}
 
-    {% block title %}Maintenance Helper{% endblock title %}
-
     <div class="container px-4 px-lg-5">
-        <!-- Heading Row-->
         <div class="row gx-4 gx-lg-5 align-items-center my-5">
             <div class="col-lg-6 gx-3">
                 <img class="img-fluid rounded mb-4 mb-lg-0" src="{% static "images/machines/machines.png" %}"
@@ -21,18 +21,18 @@
                 <div class="card-footer">
                     <a class="btn btn-primary" href="{% url 'issues' %}">View Issues</a>
                     {% if request.user.is_authenticated %}
-                    <a class="btn btn-secondary position-absolute " href="{% url 'issue create' %}"
-                       style="background: darkred">
-                        Log New Issue</a>
+                        <a class="btn btn-secondary position-absolute " href="{% url 'issue create' %}"
+                           style="background: darkred">
+                            Log New Issue</a>
                     {% endif %}
                 </div>
             </div>
         </div>
         <!-- Call to Action-->
-        <div class="card text-white bg-secondary my-5 py-4 text-center">
-            <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some
-                important information or display a clever tagline!</p></div>
-        </div>
+        {#        <div class="card text-white bg-secondary my-5 py-4 text-center">#}
+        {#            <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some#}
+        {#                important information or display a clever tagline!</p></div>#}
+        {#        </div>#}
         <!-- Content Row-->
         <div class="row gx-4 gx-lg-5">
             <div class="col-md-4 mb-5">
