--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -1,7 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
+        {% url 'index' as index %}
         {% if request.user.is_authenticated %}
-            <a class="navbar-brand" href="#!">Welcome {{ request.user.first_name }}</a>
+            <a class="navbar-brand"
+               href="{% url 'details user' pk=request.user.pk %}">
+                {% if request.path == index %}
+                    Welcome
+                {% else %}
+                    Logged as
+                {% endif %}
+                {{ request.user.first_name }}</a>
         {% endif %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
