--- a/templates/issues/issue-details.html
+++ b/templates/issues/issue-details.html
@@ -1,31 +1,48 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Issue details</title>
-</head>
-<body>
-<header>
-    {% include 'base/nav.html' %}
-</header>
+{% extends 'base/base.html' %}
+{% load static %}
+<!-- Navigation-->
+{% block title %}Issue{{ issue.pk }} details{% endblock title %}
 
-<h2>Issue No: {{ issue.pk }}</h2>
-<h3>Machine: {{ issue.machine.name }}</h3>
-<h3>Description: {{ issue.description }}</h3>
-<h3>Created by: {{ issue.created_by }}</h3>
-<h3>Created on: {{ issue.created_on }}</h3>
-<h3>
-    {% if issue.closed_on %}
-        Status: Closed on {{ issue.closed_on }}
-    {% else %}
-        Status: Open
-    {% endif %}
-</h3>
+{% block page_content %}
+    <section class="py-5">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="row gx-4 gx-lg-5 align-items-center">
+                <div class="col-md-6">
+                    <div class="small mb-1 h3 ">
+                        <h4 class="fw-bold">Issue ID: {{ issue.pk }}</h4>
+                    </div>
+                    <h5 class="display-10 fst-italic fw-bold">Machine: {{ issue.machine }}</h5>
 
-<a href="{% url 'issues' %}">Back</a>
+                    <div class="fs-5 mb-2">
+                        <span class="text-dark">Created by: {{ issue.created_by }}</span>
 
-</body>
-</html>
+                    </div>
+
+                    <div class="fs-5 mb-4">
+                        <span class="text-dark">Created on: {{ issue.create_on_date }}</span>
+                    </div>
+                    <div>Description:</div>
+                    <p class="lead">{{ issue.description }}</p>
+                    <div class="d-flex">
+                        <div class="col-3">
+                            <a class="btn btn-outline-dark flex-shrink-0" type="submit"
+                               href="{% url 'issue edit' pk=issue.pk %}">
+                                <i class="bi-cart-fill me-1"></i>
+                                Edit
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a class="btn btn-outline-dark flex-shrink-0" type="submit"
+                               href="{% url 'issues' %}">
+                                <i class="bi-cart-fill me-1"></i>
+                                Back
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+{% endblock page_content %}
